--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "watch": "webpack --watch",
     "build": "webpack --config webpack.config.js",
-    "server": "webpack-dev-server --open webpack.config.js",
+    "server": "webpack-dev-server --open",
     "clear": "rm -rf ./dist/**",
     "commit": "git pull  && git add . && git commit -m 'update' &&  git push"
   },
@@ -26,12 +26,12 @@
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
+    "file-loader": "^1.0.0",
     "html-webpack-plugin": "^2.29.0",
     "less-loader": "^4.0.5",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "webpack": "^3.4.0",
+    "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1"
   }
 }
