--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --config webpack.config.js",
     "server": "webpack-dev-server --open",
     "clear": "rm -rf ./dist/**",
-    "commit": "git pull  && git add . && git commit -m 'update' &&  git push"
+    "gitpush": "git pull  && git add . && git commit -m 'update' &&  git push"
   },
   "keywords": [
     "js",
